--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-router-dom": "^4.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm install; react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
