--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "^4.0.1"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1"
